[package]
name = "box_hunter"
version = "0.1.0"
authors = ["Dzmitry Talkach <dzmitry.talkach@urbansportsclub.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
log = "0.4.11"
simple_logger = "1.9.0"
